@@ -6,6 +6,6 @@
   "contact": "Discord: Raiguard#7402",
   "homepage": "https://github.com/raiguard/Factorio-RecipeBook",
   "factorio_version": "0.18",
-  "dependencies": ["? base >= 0.18.33", "flib >= 0.1.4"],
+  "dependencies": ["? base >= 0.18.35", "flib >= 0.1.6"],
   "description": "Search for information about materials and recipes in a clean, easy-to-use interface. Similar to FNEI and What is it Really Used For."
 }
