@@ -95,7 +95,7 @@ function player_data.refresh(player, player_table)
 
   -- run translations
   player_table.translations = util.table.deepcopy(constants.empty_translations_table)
-  if player.connected then
+  if player.connected and not game.is_multiplayer() then
     player_data.start_translations(player.index)
   else
     player_table.flags.translate_on_join = true
