@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a desync related to player.connnected being unreliable during on_configuration_changed in multiplayer
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2020-07-25
